--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:docker": "vite build --base app --outDir ../public/app",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,8 +15,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
     "recoil": "^0.7.7",
     "tailwindcss": "^4.1.11"
